crates/config/tests/unit/snapshots/main__unit__rows__a_row_patches_through_the_public_contract@cover_style.snap
---
source: crates/config/tests/unit/rows.rs
expression: patch
---
AppearancePatch {
    cover_style: Some(
        Milkdrop,
    ),
    cover_brackets: None,
    format_chips: None,
    speed_chip: None,
    progress_time: None,
    key_hints: None,
    animations: None,
    layout_mode: None,
}
