crates/config/tests/unit/snapshots/main__unit__rows__an_unknown_row_is_rejected_through_the_public_contract.snap
---
source: crates/config/tests/unit/rows.rs
expression: rejected
---
Err(
    UnknownRow {
        id: SettingId(
            999,
        ),
    },
)
